@@ -48,6 +48,9 @@ Switched to GForge bug numbering as of iRODS2.5
 *[#176] put/get resource switching - work in progress...initial testing of get operations
 
 *Addition of buffering capability for input streams for better performance
+
+*[#166] gen query 'in' support - work in progress, waiting on testing with accompanying iRODS server patches
+
  
 ================================================================================================
 Outstanding Issues
